
{{$NEXT}}

  [ENHANCEMENTS]

  * Added a new "executor_roles" parameter to the Test::Class::Moose::Runner
    constructor. This allows you to apply roles to the executor (the object
    which executes test classes) as a way to extend the default TCM
    behavior. See the documentation for Test::Class::Moose::Role::Executor for
    methods which you can wrap.

0.91     2017-12-07

  [BUG FIXES]

  * Use sum0 instead of sum in the num_test_instances() method for the report
    object. Fixed by Larry Leszczynski. GH #87.

0.90     2017-11-28

  [BUG FIXES]

  * Require Test2 1.1302118 per Chad Granum's recommendation. This version
    includes some fixes for bugs that could cause tests to hang.

0.89     2017-11-19

  [ENHANCEMENTS]

  * Moved the check for bad class names in Test::Class::Moose::Role::Executor
    to its own method to facilitate overriding just that portion of the
    role. Based on PR #85 from Chuck Adams, and addresses #84.

0.88     2017-11-04

  [BUG FIXES]

  - When no tests were run, the num_tests_run() method for the report object
    would return undef instead of 0. Reported by Johan Lindstrom. GH #83.

0.87     2017-09-12

  [BUG FIXES]

  * Fixed link to the TCM home page in the docs. Fixed by Paul Williams. GH
    #82.

0.86     2017-09-05

  [BUG FIXES]

  * The change to add start_time and end_time methods to all reports
    completely broke timing data, so all tests reported taking essentially
    zero time. Reported by Andy Armstrong. GH #81.

0.85     2017-07-29

  [ENHANCEMENTS]

  * All report objects now have start_time and end_time methods.

  * Added support for the "bare => 1" import option to
    Test::Class::Moose::Role. Implemented by Desmond Daignault. PR #80.

0.84     2017-05-15

  [ENHANCEMENTS]

  * Make it possible to disable the progress output shown when running tests
    in parallel. This does not play nicely with things like
    TAP::Harness::Archive and prove's --merge flag. The output ends up