@@ -26,7 +26,6 @@ test_events_is(
 );
 
 my %expect = (
-    is_parallel        => F(),
     num_tests_run      => 2,
     num_test_instances => 2,
     num_test_methods   => 2,
